<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/event_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:scaleType="fitXY"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="4dp"
                    android:background="@color/colorPrimary"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="2">

                    <TextView
                            android:id="@+id/event_textView_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/workshop_android"
                            android:textSize="12sp"/>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="4dp"
                            tools:ignore="UseCompoundDrawables">


                        <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:src="@drawable/nearby"/>

                        <TextView
                                android:id="@+id/event_textView_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/semarang"
                                android:textSize="12sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="right">

                    <TextView
                            android:id="@+id/event_textView_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:text="@string/_20"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/event_textView_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:text="@string/okt"
                            android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>